--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port = 8080
-spring.datasource.url=jdbc:mysql://localhost:3306/fantasy
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port = 8081
+spring.datasource.url = jdbc:mysql://localhost:3306/fantasy
+spring.datasource.username = root
+spring.datasource.password = Amr12345!
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 hibernate.transaction.jta.platform = true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled = true
+spring.h2.console.path = /h2-console
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = update
+spring.security.user.password=password
