--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
+spring.data.rest.basePath=/api
