--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.path=/h2-console
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.data.rest.basePath=/api
+spring.security.user.name=name
+spring.security.user.password=asde
