--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8081
 spring.datasource.url = jdbc:mysql://localhost:3306/fantasy
 spring.datasource.username = root
-spring.datasource.password = Amr12345!
+spring.datasource.password = 1234
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 hibernate.transaction.jta.platform = true
