--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.14.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
