--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-server.port = 8080
+server.port = 8081
 spring.datasource.url=jdbc:mysql://localhost:3306/fantasy
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Amr12345!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 hibernate.transaction.jta.platform = true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.data.rest.basePath=/api
 spring.security.user.name=name
 spring.security.user.password=asde
