--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,12 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
     "gapi-script": "^1.2.0",
     "history": "^5.3.0",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-scripts": "5.0.1",
@@ -44,6 +42,8 @@
   },
   "devDependencies": {
     "axios": "^1.6.2",
-    "react-router-dom": "^6.18.0"
+    "postcss": "^8.4.32",
+    "react-router-dom": "^6.18.0",
+    "tailwindcss": "^3.3.6"
   }
 }
