--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
     "@mui/material": "^5.14.18",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.10.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "use-debounce": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
