--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port = 8080
-spring.datasource.url = jdbc:mysql://fantasyteam.mysql.database.azure.com:3306/fantasy
-spring.datasource.username = fantasyteam_admin
-spring.datasource.password = Cristianoronaldo1@
+server.port = 8081
+spring.datasource.url = jdbc:mysql://fantasyproject.mysql.database.azure.com:3306/fantasy
+spring.datasource.username = FantasyProject_Admin
+spring.datasource.password = Cristiano1@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql = true
 hibernate.transaction.jta.platform = true
 spring.h2.console.enabled = true
@@ -10,6 +11,7 @@ spring.h2.console.path = /h2-console
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = update
 spring.security.user.password=password
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fantasyteamcsed@gmail.com
